manifests/use-cases-common-default-ns/04-pathbased-rt/dp-pathbased-rt.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-svc
  labels:
    example: http-routing
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 3000
  selector:
    app: example-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-backend
  labels:
    app: example-backend
    example: http-routing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-backend
  template:
    metadata:
      labels:
        app: example-backend
    spec:
      containers:
        - name: example-backend
          image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          resources:
            requests:
              cpu: 10m
---
apiVersion: v1
kind: Service
metadata:
  name: foo-svc
  labels:
    example: http-routing
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 3000
  selector:
    app: foo-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-backend
  labels:
    app: foo-backend
    example: http-routing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo-backend
  template:
    metadata:
      labels:
        app: foo-backend
    spec:
      containers:
        - name: foo-backend
          image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          resources:
            requests:
              cpu: 10m
---
apiVersion: v1
kind: Service
metadata:
  name: bar-svc
  labels:
    example: http-routing
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 3000
  selector:
    app: bar-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-backend
  labels:
    app: bar-backend
    example: http-routing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar-backend
  template:
    metadata:
      labels:
        app: bar-backend
    spec:
      containers:
        - name: bar-backend
          image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          resources:
            requests:
              cpu: 10m
---
apiVersion: v1
kind: Service
metadata:
  name: bar-canary-svc
  labels:
    example: http-routing
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 3000
  selector:
    app: bar-canary-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-canary-backend
  labels:
    app: bar-canary-backend
    example: http-routing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar-canary-backend
  template:
    metadata:
      labels:
        app: bar-canary-backend
    spec:
      containers:
        - name: bar-canary-backend
          image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          resources:
            requests:
              cpu: 10m
