manifests/use-cases-common-default-ns/04-pathbased-rt/htr-pathbased.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
  labels:
    example: http-routing
spec:
  parentRefs:
    - name: http-routing-gateway
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: example-svc
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foo-route
  labels:
    example: http-routing
spec:
  parentRefs:
    - name: http-routing-gateway
  hostnames:
    - "foo.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /login
      backendRefs:
        - name: foo-svc
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bar-route
  labels:
    example: http-routing
spec:
  parentRefs:
    - name: http-routing-gateway
  hostnames:
    - "bar.example.com"
  rules:
    - matches:
        - headers:
            - type: Exact
              name: env
              value: canary
      backendRefs:
        - name: bar-canary-svc
          port: 8080
    - backendRefs:
        - name: bar-svc
          port: 8080
